--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <input type="submit" value="Search" id="searchBtn">
                 </form>
         </div>
-        <div id="searchHistory" class="btn" />
+        <div id="searchHistory" class="btns" />
     </section>
 
     <section id="displays">
@@ -36,7 +36,7 @@
     </section>
 
 
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" />
-    <script src="assets/js/script.js" />
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
